openfgdb4j/native/include/openfgdb_c_api.h

/* Convenience string APIs for Java FFM wrappers. The returned heap strings
 * are owned by the caller and must be freed with ofgdb_free_string().
 */
OFGDB_API int ofgdb_list_domains_text(uint64_t db_handle, char **out_text);
OFGDB_API int ofgdb_list_relationships_text(uint64_t db_handle, char **out_text);
OFGDB_API int ofgdb_list_tables_text(uint64_t db_handle, char **out_text);
OFGDB_API int ofgdb_list_runtime_info_text(char **out_text);
OFGDB_API int ofgdb_row_get_string(uint64_t row_handle, const char *column_name, char **out_value);
OFGDB_API int ofgdb_row_is_null(uint64_t row_handle, const char *column_name, int32_t *out_is_null);
OFGDB_API int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value);