openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_domains_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MemorySegment ofgdb_list_domains_text$address() {
        return ofgdb_list_domains_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_domains_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static int ofgdb_list_domains_text(long db_handle, MemorySegment out_text) {
        var mh$ = ofgdb_list_domains_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_domains_text", db_handle, out_text);
            }
            return (int)mh$.invokeExact(db_handle, out_text);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_relationships_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_relationships_text").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_relationships_text"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static FunctionDescriptor ofgdb_list_relationships_text$descriptor() {
        return ofgdb_list_relationships_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MethodHandle ofgdb_list_relationships_text$handle() {
        return ofgdb_list_relationships_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MemorySegment ofgdb_list_relationships_text$address() {
        return ofgdb_list_relationships_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_relationships_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static int ofgdb_list_relationships_text(long db_handle, MemorySegment out_text) {
        var mh$ = ofgdb_list_relationships_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_relationships_text", db_handle, out_text);
            }
            return (int)mh$.invokeExact(db_handle, out_text);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_tables_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_tables_text").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_tables_text"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_tables_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static FunctionDescriptor ofgdb_list_tables_text$descriptor() {
        return ofgdb_list_tables_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_tables_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MethodHandle ofgdb_list_tables_text$handle() {
        return ofgdb_list_tables_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_tables_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MemorySegment ofgdb_list_tables_text$address() {
        return ofgdb_list_tables_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_tables_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static int ofgdb_list_tables_text(long db_handle, MemorySegment out_text) {
        var mh$ = ofgdb_list_tables_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_tables_text", db_handle, out_text);
            }
            return (int)mh$.invokeExact(db_handle, out_text);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_runtime_info_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_runtime_info_text").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_runtime_info_text"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_runtime_info_text(char **out_text)
     * }
     */
    public static FunctionDescriptor ofgdb_list_runtime_info_text$descriptor() {
        return ofgdb_list_runtime_info_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_runtime_info_text(char **out_text)
     * }
     */
    public static MethodHandle ofgdb_list_runtime_info_text$handle() {
        return ofgdb_list_runtime_info_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_runtime_info_text(char **out_text)
     * }
     */
    public static MemorySegment ofgdb_list_runtime_info_text$address() {
        return ofgdb_list_runtime_info_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_runtime_info_text(char **out_text)
     * }
     */
    public static int ofgdb_list_runtime_info_text(MemorySegment out_text) {
        var mh$ = ofgdb_list_runtime_info_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_runtime_info_text", out_text);
            }
            return (int)mh$.invokeExact(out_text);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_get_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_get_string").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_get_string"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_get_string(uint64_t row_handle, const char *column_name, char **out_value)
     * }
     */
    public static FunctionDescriptor ofgdb_row_get_string$descriptor() {
        return ofgdb_row_get_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_get_string(uint64_t row_handle, const char *column_name, char **out_value)
     * }
     */
    public static MethodHandle ofgdb_row_get_string$handle() {
        return ofgdb_row_get_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_get_string(uint64_t row_handle, const char *column_name, char **out_value)
     * }
     */
    public static MemorySegment ofgdb_row_get_string$address() {
        return ofgdb_row_get_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_get_string(uint64_t row_handle, const char *column_name, char **out_value)
     * }
     */
    public static int ofgdb_row_get_string(long row_handle, MemorySegment column_name, MemorySegment out_value) {
        var mh$ = ofgdb_row_get_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_get_string", row_handle, column_name, out_value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, out_value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_is_null {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_is_null").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_is_null"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_is_null(uint64_t row_handle, const char *column_name, int32_t *out_is_null)
     * }
     */
    public static FunctionDescriptor ofgdb_row_is_null$descriptor() {
        return ofgdb_row_is_null.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_is_null(uint64_t row_handle, const char *column_name, int32_t *out_is_null)
     * }
     */
    public static MethodHandle ofgdb_row_is_null$handle() {
        return ofgdb_row_is_null.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_is_null(uint64_t row_handle, const char *column_name, int32_t *out_is_null)
     * }
     */
    public static MemorySegment ofgdb_row_is_null$address() {
        return ofgdb_row_is_null.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_is_null(uint64_t row_handle, const char *column_name, int32_t *out_is_null)
     * }
     */
    public static int ofgdb_row_is_null(long row_handle, MemorySegment column_name, MemorySegment out_is_null) {
        var mh$ = ofgdb_row_is_null.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_is_null", row_handle, column_name, out_is_null);
            }
            return (int)mh$.invokeExact(row_handle, column_name, out_is_null);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_get_int32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_get_int32").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_get_int32"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
